[package]
name = "powsup"
version = "0.2.1"
authors = ["Kai Harries <kai.harries@posteo.de>"]
description = "Controlling a Manson power-supply via serial connection."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.2.5", features = ["derive"] }
clap-verbosity-flag = "^2.0.1"
crossterm = "^0.26.1"
log = "^0.4.17"
serialport = "^4.2"
simple_logger = "^4.1"
ratatui = "^0.20.1"
