[package]
name = "powsup"
version = "0.2.3"
authors = ["Kai Harries <kai.harries@posteo.de>"]
description = "Controlling a Manson power-supply via serial connection."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
circular-buffer = "1.1.0"
clap = { version = "4.4.10", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
crossterm = "0.27.0"
derive_more = {version = "2.0.1", features = ["from", "into"] }
log = "0.4.20"
ratatui = "0.24.0"
serialport = "4.2.2"
simple_logger = "4.3.0"
